<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/converted_from"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@+id/tvTo"
        app:layout_constraintTop_toBottomOf="@+id/tvFrom"
        tools:layout_editor_absoluteX="16dp">

        <Spinner
            android:id="@+id/spinner_firstConversion"
            android:layout_width="99dp"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="247dp" />

        <EditText
            android:id="@+id/et_firstConversion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="0.0"
            android:hint="@string/enter_amount"
            android:textColor="@android:color/black"
            android:inputType="numberDecimal"
            tools:layout_editor_absoluteX="-32dp"
            tools:layout_editor_absoluteY="131dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/converted_to"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7.5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTo"
        app:layout_constraintVertical_bias="0.08"
        tools:ignore="MissingConstraints">

        <Spinner
            android:id="@+id/spinner_secondConversion"
            android:layout_width="99dp"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="247dp" />

        <EditText
            android:id="@+id/et_secondConversion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="0.0"
            android:textColor="@android:color/black"
            android:hint="@string/enter_amount"
            android:inputType="numberDecimal"
            tools:layout_editor_absoluteX="-32dp"
            tools:layout_editor_absoluteY="131dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="35dp" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.566"
        android:contentDescription="@string/todo" />


</androidx.constraintlayout.widget.ConstraintLayout>